Add functionality to the button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
 
     <!-- Script -->
+    <script src="config.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
