--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Script -->
     <script src="config.js"></script>
+    <script src="jokeRSS.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
