Add joke choice options

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div class="container">
       <button id="button">Tell Me A Joke</button>
       <audio id="audio" controls hidden></audio>
+      <div class="jokeTypes">
+        <button id="programming" disabled>Programming</button>
+        <button id="nsfw">NSFW</button>
+        <button id="dark">Dark</button>
+      </div>
     </div>
 
     <!-- Script -->
